syntax = "proto3";

message GameCluster {
  string url = 1;
};